--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+*{
+	margin:0px;
+	padding:0px;
+	text-align:center;
+}
+h1{
+	margin:40px;
+}
+.code-container{
+margin:30px;	
+display:flex;
+justify-content:center;
+align-items:center;	
+gap:.5rem;	
+
+}
+
+
+.code {
+  width: 15vw;
+  height: 15vw;
+  background-color: white;
+  text-align: center;
+  color: grey;
+  font-size: 3rem;
+  outline: none;
+  border: 1px solid #e1e1ea;  
+}
+
+
+
+
+
